# idasen-cli

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: rust.yml
src/: main.rs
